# rule-110-compiler

./: .gitignore  AGENTS.md  COOK_TASKS.md  README.md  README_UNIVERSALITY.md  README_visualization.md  adder.py  bf_to_cts.py  binary_arithmetic_demo.html  binary_io_demo.html  brainfuck_compiler.py  clean_computation_ui.html  compiler.py  compiler_v2.py  comprehensive_debug_test.py  computation_explanation.html  construct_cook_gliders.py  cook_ca_decoder.py  cook_cts.py  cook_cts_encoder.py  cook_cts_executor.py  cook_explanation.md  cook_gliders.py  cook_gliders_exact.py  cook_gliders_moving.py  cook_leaders.py  cook_visualizer.py  cts_decode.py  cts_executor.py  cts_scheduler.py  cts_to_rule110.py  debug_collisions.py  debug_output_detection.py  debug_visualization.html  demo_cook_cts.py  derive_gliders.py  discover_cook_gliders.py  educational_rule110.html  ether_distances.py  examples.py  (+53 more)
compiler/: aligned_tagsystem.py  bf.py  bf_to_2sym_tm.py  bf_to_tm.py  cook_tape.py  cts.py  cts_to_r110.py  glider_detect.py  tagsystem.py  tagsystem_to_cts.py  tm.py  tm_to_tagsystem.py
core/: cook_gliders.py  ether.py  gliders.py  rule110.py  rule110_fast.py  rule110_gpu.py
docs/: gliders_status.md  pipeline.md
runtime/: decode.py  evolve.py
scripts/: bench_gpu.py  collide.py  deploy_viz.sh  discover_gliders.py  exhaustive_e_search.py  exhaustive_e_search_constrained.py  extract_gliders.py  find_c_variants.py  find_cook_crossing.py  find_cook_variants.py  find_e_via_collisions.py  gen_rule110_bf.py  isolate_gliders.py  long_random_e.py  observe_gliders.py  probe_c_ebar.py  (+6 more)
(+67 files in other folders)
