[project]
name = "rule-110-compiler"
version = "0.1.0"
description = "Brainfuck to Rule 110 compiler following Cook's 2004 universality proof."
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest>=8"]
fast = ["numpy>=1.26"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "compiler*", "runtime*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
